# CLGR

./: .gitmodules  CMakeLists.txt  README.md  compile.bat  compile.sh  compile_debug.bat  compile_release.bat  makefile  set_env.bat
src/: Clgr.cpp  ErrorLog.hpp  FileInfo.hpp  FileReader.hpp  FileWriter.hpp  GoThroughAllDir.hpp  MatchFileSearch.hpp  MatchTextSearch.hpp  ParseCommandLine.hpp  SearchTextThread.hpp  Semaphore.hpp  StandardThread.hpp  Surface.hpp  Timer.hpp  main.cpp
src/args/: Args.cpp  Args.hpp
src/common/: CommandLineParser.cpp  CommandLineParser.hpp  DeviceManager.hpp  FileBrowser.cpp  FileBrowser.hpp  FileReader.hpp  FileWriter.hpp  Logger.hpp  MatchedLine.hpp  SearchFilterFactory.cpp  SearchFilterFactory.hpp  Semaphore.cpp  Semaphore.hpp  TimerService.hpp  functions.cpp  functions.hpp  utils.cpp  utils.hpp
src/exceptions/: FileError.hpp  ParserError.hpp  SemaphoreError.hpp
src/main/: Clgr.cpp  FileSearcher.hpp  HelpDisplayer.hpp  TextSearcher.hpp  VersionControler.hpp
src/output/: ClgrResult.hpp  Result.hpp
src/search/: ClgrSearcher.cpp  ClgrSearcher.hpp  FileSearcher.cpp  FileSearcher.hpp  TextSearcher.cpp  TextSearcher.hpp
src/threads/: FileQueue.cpp  FileQueue.hpp  Pool.cpp  Pool.hpp
src/types/: FileInfo.hpp  LinesContainer.hpp  SearchInfo.hpp
